--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.firebase:geofire-android:2.1.1'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
 }
 apply plugin: 'com.google.gms.google-services'
